[patch] edit models user_sessions
